// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`modules/manager/helmv3/artifacts alias name is picked, when repository is as alias and dependency defined 1`] = `
[
  {
    "cmd": "helm repo add repo1 https://gitlab.com/api/v4/projects/xxxxxxx/packages/helm/stable --username basicUser --password secret",
    "options": {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": {
        "HELM_EXPERIMENTAL_OCI": "1",
        "HELM_REGISTRY_CONFIG": "/tmp/renovate/cache/__renovate-private-cache/registry.json",
        "HELM_REPOSITORY_CACHE": "/tmp/renovate/cache/__renovate-private-cache/repositories",
        "HELM_REPOSITORY_CONFIG": "/tmp/renovate/cache/__renovate-private-cache/repositories.yaml",
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
  {
    "cmd": "helm dependency update ''",
    "options": {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": {
        "HELM_EXPERIMENTAL_OCI": "1",
        "HELM_REGISTRY_CONFIG": "/tmp/renovate/cache/__renovate-private-cache/registry.json",
        "HELM_REPOSITORY_CACHE": "/tmp/renovate/cache/__renovate-private-cache/repositories",
        "HELM_REPOSITORY_CONFIG": "/tmp/renovate/cache/__renovate-private-cache/repositories.yaml",
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
]
`;

exports[`modules/manager/helmv3/artifacts do not add registryAliases to repository list 1`] = `
[
  {
    "cmd": "helm repo add jetstack https://charts.jetstack.io",
    "options": {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": {
        "HELM_EXPERIMENTAL_OCI": "1",
        "HELM_REGISTRY_CONFIG": "/tmp/renovate/cache/__renovate-private-cache/registry.json",
        "HELM_REPOSITORY_CACHE": "/tmp/renovate/cache/__renovate-private-cache/repositories",
        "HELM_REPOSITORY_CONFIG": "/tmp/renovate/cache/__renovate-private-cache/repositories.yaml",
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
  {
    "cmd": "helm repo add nginx https://kubernetes.github.io/ingress-nginx",
    "options": {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": {
        "HELM_EXPERIMENTAL_OCI": "1",
        "HELM_REGISTRY_CONFIG": "/tmp/renovate/cache/__renovate-private-cache/registry.json",
        "HELM_REPOSITORY_CACHE": "/tmp/renovate/cache/__renovate-private-cache/repositories",
        "HELM_REPOSITORY_CONFIG": "/tmp/renovate/cache/__renovate-private-cache/repositories.yaml",
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
  {
    "cmd": "helm dependency update ''",
    "options": {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": {
        "HELM_EXPERIMENTAL_OCI": "1",
        "HELM_REGISTRY_CONFIG": "/tmp/renovate/cache/__renovate-private-cache/registry.json",
        "HELM_REPOSITORY_CACHE": "/tmp/renovate/cache/__renovate-private-cache/repositories",
        "HELM_REPOSITORY_CONFIG": "/tmp/renovate/cache/__renovate-private-cache/repositories.yaml",
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
]
`;

exports[`modules/manager/helmv3/artifacts log into private registries and repositories NOT defined in registryAliases 1`] = `
[
  {
    "cmd": "helm registry login --username registryUser --password password registry.gitlab.com/user/oci-helm-test",
    "options": {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": {
        "HELM_EXPERIMENTAL_OCI": "1",
        "HELM_REGISTRY_CONFIG": "/tmp/renovate/cache/__renovate-private-cache/registry.json",
        "HELM_REPOSITORY_CACHE": "/tmp/renovate/cache/__renovate-private-cache/repositories",
        "HELM_REPOSITORY_CONFIG": "/tmp/renovate/cache/__renovate-private-cache/repositories.yaml",
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
  {
    "cmd": "helm repo add repo-test https://gitlab.com/api/v4/projects/xxxxxxx/packages/helm/stable --username basicUser --password secret",
    "options": {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": {
        "HELM_EXPERIMENTAL_OCI": "1",
        "HELM_REGISTRY_CONFIG": "/tmp/renovate/cache/__renovate-private-cache/registry.json",
        "HELM_REPOSITORY_CACHE": "/tmp/renovate/cache/__renovate-private-cache/repositories",
        "HELM_REPOSITORY_CONFIG": "/tmp/renovate/cache/__renovate-private-cache/repositories.yaml",
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
  {
    "cmd": "helm dependency update ''",
    "options": {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": {
        "HELM_EXPERIMENTAL_OCI": "1",
        "HELM_REGISTRY_CONFIG": "/tmp/renovate/cache/__renovate-private-cache/registry.json",
        "HELM_REPOSITORY_CACHE": "/tmp/renovate/cache/__renovate-private-cache/repositories",
        "HELM_REPOSITORY_CONFIG": "/tmp/renovate/cache/__renovate-private-cache/repositories.yaml",
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
]
`;

exports[`modules/manager/helmv3/artifacts log into private registries and repositories already defined in registryAliases 1`] = `
[
  {
    "cmd": "helm registry login --username test --password aPassword registry.example.com/organization",
    "options": {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": {
        "HELM_EXPERIMENTAL_OCI": "1",
        "HELM_REGISTRY_CONFIG": "/tmp/renovate/cache/__renovate-private-cache/registry.json",
        "HELM_REPOSITORY_CACHE": "/tmp/renovate/cache/__renovate-private-cache/repositories",
        "HELM_REPOSITORY_CONFIG": "/tmp/renovate/cache/__renovate-private-cache/repositories.yaml",
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
  {
    "cmd": "helm repo add stable the_stable_url",
    "options": {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": {
        "HELM_EXPERIMENTAL_OCI": "1",
        "HELM_REGISTRY_CONFIG": "/tmp/renovate/cache/__renovate-private-cache/registry.json",
        "HELM_REPOSITORY_CACHE": "/tmp/renovate/cache/__renovate-private-cache/repositories",
        "HELM_REPOSITORY_CONFIG": "/tmp/renovate/cache/__renovate-private-cache/repositories.yaml",
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
  {
    "cmd": "helm repo add repo1 https://the_repo1_url --username basicUser --password secret",
    "options": {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": {
        "HELM_EXPERIMENTAL_OCI": "1",
        "HELM_REGISTRY_CONFIG": "/tmp/renovate/cache/__renovate-private-cache/registry.json",
        "HELM_REPOSITORY_CACHE": "/tmp/renovate/cache/__renovate-private-cache/repositories",
        "HELM_REPOSITORY_CONFIG": "/tmp/renovate/cache/__renovate-private-cache/repositories.yaml",
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
  {
    "cmd": "helm repo add repo-test https://gitlab.com/api/v4/projects/xxxxxxx/packages/helm/stable",
    "options": {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": {
        "HELM_EXPERIMENTAL_OCI": "1",
        "HELM_REGISTRY_CONFIG": "/tmp/renovate/cache/__renovate-private-cache/registry.json",
        "HELM_REPOSITORY_CACHE": "/tmp/renovate/cache/__renovate-private-cache/repositories",
        "HELM_REPOSITORY_CONFIG": "/tmp/renovate/cache/__renovate-private-cache/repositories.yaml",
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
  {
    "cmd": "helm dependency update ''",
    "options": {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": {
        "HELM_EXPERIMENTAL_OCI": "1",
        "HELM_REGISTRY_CONFIG": "/tmp/renovate/cache/__renovate-private-cache/registry.json",
        "HELM_REPOSITORY_CACHE": "/tmp/renovate/cache/__renovate-private-cache/repositories",
        "HELM_REPOSITORY_CONFIG": "/tmp/renovate/cache/__renovate-private-cache/repositories.yaml",
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
]
`;

exports[`modules/manager/helmv3/artifacts returns null if unchanged 1`] = `
[
  {
    "cmd": "helm repo add repo-test https://gitlab.com/api/v4/projects/xxxxxxx/packages/helm/stable",
    "options": {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": {
        "HELM_EXPERIMENTAL_OCI": "1",
        "HELM_REGISTRY_CONFIG": "/tmp/renovate/cache/__renovate-private-cache/registry.json",
        "HELM_REPOSITORY_CACHE": "/tmp/renovate/cache/__renovate-private-cache/repositories",
        "HELM_REPOSITORY_CONFIG": "/tmp/renovate/cache/__renovate-private-cache/repositories.yaml",
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
  {
    "cmd": "helm dependency update ''",
    "options": {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": {
        "HELM_EXPERIMENTAL_OCI": "1",
        "HELM_REGISTRY_CONFIG": "/tmp/renovate/cache/__renovate-private-cache/registry.json",
        "HELM_REPOSITORY_CACHE": "/tmp/renovate/cache/__renovate-private-cache/repositories",
        "HELM_REPOSITORY_CONFIG": "/tmp/renovate/cache/__renovate-private-cache/repositories.yaml",
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
]
`;

exports[`modules/manager/helmv3/artifacts returns updated Chart.lock 1`] = `
[
  {
    "cmd": "helm repo add repo-test https://gitlab.com/api/v4/projects/xxxxxxx/packages/helm/stable",
    "options": {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": {
        "HELM_EXPERIMENTAL_OCI": "1",
        "HELM_REGISTRY_CONFIG": "/tmp/renovate/cache/__renovate-private-cache/registry.json",
        "HELM_REPOSITORY_CACHE": "/tmp/renovate/cache/__renovate-private-cache/repositories",
        "HELM_REPOSITORY_CONFIG": "/tmp/renovate/cache/__renovate-private-cache/repositories.yaml",
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
  {
    "cmd": "helm dependency update ''",
    "options": {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": {
        "HELM_EXPERIMENTAL_OCI": "1",
        "HELM_REGISTRY_CONFIG": "/tmp/renovate/cache/__renovate-private-cache/registry.json",
        "HELM_REPOSITORY_CACHE": "/tmp/renovate/cache/__renovate-private-cache/repositories",
        "HELM_REPOSITORY_CONFIG": "/tmp/renovate/cache/__renovate-private-cache/repositories.yaml",
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
]
`;

exports[`modules/manager/helmv3/artifacts returns updated Chart.lock for lockfile maintenance 1`] = `
[
  {
    "cmd": "helm repo add repo-test https://gitlab.com/api/v4/projects/xxxxxxx/packages/helm/stable",
    "options": {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": {
        "HELM_EXPERIMENTAL_OCI": "1",
        "HELM_REGISTRY_CONFIG": "/tmp/renovate/cache/__renovate-private-cache/registry.json",
        "HELM_REPOSITORY_CACHE": "/tmp/renovate/cache/__renovate-private-cache/repositories",
        "HELM_REPOSITORY_CONFIG": "/tmp/renovate/cache/__renovate-private-cache/repositories.yaml",
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
  {
    "cmd": "helm dependency update ''",
    "options": {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": {
        "HELM_EXPERIMENTAL_OCI": "1",
        "HELM_REGISTRY_CONFIG": "/tmp/renovate/cache/__renovate-private-cache/registry.json",
        "HELM_REPOSITORY_CACHE": "/tmp/renovate/cache/__renovate-private-cache/repositories",
        "HELM_REPOSITORY_CONFIG": "/tmp/renovate/cache/__renovate-private-cache/repositories.yaml",
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
]
`;

exports[`modules/manager/helmv3/artifacts returns updated Chart.lock with docker 1`] = `
[
  {
    "cmd": "docker pull ghcr.io/containerbase/sidecar",
    "options": {
      "encoding": "utf-8",
    },
  },
  {
    "cmd": "docker ps --filter name=renovate_sidecar -aq",
    "options": {
      "encoding": "utf-8",
    },
  },
  {
    "cmd": "docker run --rm --name=renovate_sidecar --label=renovate_child -v "/tmp/github/some/repo":"/tmp/github/some/repo" -v "/tmp/renovate/cache":"/tmp/renovate/cache" -e HELM_EXPERIMENTAL_OCI -e HELM_REGISTRY_CONFIG -e HELM_REPOSITORY_CONFIG -e HELM_REPOSITORY_CACHE -e CONTAINERBASE_CACHE_DIR -w "/tmp/github/some/repo" ghcr.io/containerbase/sidecar bash -l -c "install-tool helm v3.7.2 && helm repo add repo-test https://gitlab.com/api/v4/projects/xxxxxxx/packages/helm/stable && helm dependency update ''"",
    "options": {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": {
        "CONTAINERBASE_CACHE_DIR": "/tmp/renovate/cache/containerbase",
        "HELM_EXPERIMENTAL_OCI": "1",
        "HELM_REGISTRY_CONFIG": "/tmp/renovate/cache/__renovate-private-cache/registry.json",
        "HELM_REPOSITORY_CACHE": "/tmp/renovate/cache/__renovate-private-cache/repositories",
        "HELM_REPOSITORY_CONFIG": "/tmp/renovate/cache/__renovate-private-cache/repositories.yaml",
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
]
`;

exports[`modules/manager/helmv3/artifacts sets repositories from registryAliases 1`] = `
[
  {
    "cmd": "helm repo add stable the_stable_url",
    "options": {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": {
        "HELM_EXPERIMENTAL_OCI": "1",
        "HELM_REGISTRY_CONFIG": "/tmp/renovate/cache/__renovate-private-cache/registry.json",
        "HELM_REPOSITORY_CACHE": "/tmp/renovate/cache/__renovate-private-cache/repositories",
        "HELM_REPOSITORY_CONFIG": "/tmp/renovate/cache/__renovate-private-cache/repositories.yaml",
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
  {
    "cmd": "helm repo add repo1 the_repo1_url",
    "options": {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": {
        "HELM_EXPERIMENTAL_OCI": "1",
        "HELM_REGISTRY_CONFIG": "/tmp/renovate/cache/__renovate-private-cache/registry.json",
        "HELM_REPOSITORY_CACHE": "/tmp/renovate/cache/__renovate-private-cache/repositories",
        "HELM_REPOSITORY_CONFIG": "/tmp/renovate/cache/__renovate-private-cache/repositories.yaml",
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
  {
    "cmd": "helm repo add repo-test https://gitlab.com/api/v4/projects/xxxxxxx/packages/helm/stable",
    "options": {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": {
        "HELM_EXPERIMENTAL_OCI": "1",
        "HELM_REGISTRY_CONFIG": "/tmp/renovate/cache/__renovate-private-cache/registry.json",
        "HELM_REPOSITORY_CACHE": "/tmp/renovate/cache/__renovate-private-cache/repositories",
        "HELM_REPOSITORY_CONFIG": "/tmp/renovate/cache/__renovate-private-cache/repositories.yaml",
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
  {
    "cmd": "helm dependency update ''",
    "options": {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": {
        "HELM_EXPERIMENTAL_OCI": "1",
        "HELM_REGISTRY_CONFIG": "/tmp/renovate/cache/__renovate-private-cache/registry.json",
        "HELM_REPOSITORY_CACHE": "/tmp/renovate/cache/__renovate-private-cache/repositories",
        "HELM_REPOSITORY_CONFIG": "/tmp/renovate/cache/__renovate-private-cache/repositories.yaml",
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
]
`;

exports[`modules/manager/helmv3/artifacts sets repositories from registryAliases with docker 1`] = `
[
  {
    "cmd": "docker pull ghcr.io/containerbase/sidecar",
    "options": {
      "encoding": "utf-8",
    },
  },
  {
    "cmd": "docker ps --filter name=renovate_sidecar -aq",
    "options": {
      "encoding": "utf-8",
    },
  },
  {
    "cmd": "docker run --rm --name=renovate_sidecar --label=renovate_child -v "/tmp/github/some/repo":"/tmp/github/some/repo" -v "/tmp/renovate/cache":"/tmp/renovate/cache" -e HELM_EXPERIMENTAL_OCI -e HELM_REGISTRY_CONFIG -e HELM_REPOSITORY_CONFIG -e HELM_REPOSITORY_CACHE -e CONTAINERBASE_CACHE_DIR -w "/tmp/github/some/repo" ghcr.io/containerbase/sidecar bash -l -c "install-tool helm v3.7.2 && helm repo add stable the_stable_url && helm repo add repo1 the_repo1_url && helm repo add repo-test https://gitlab.com/api/v4/projects/xxxxxxx/packages/helm/stable && helm dependency update ''"",
    "options": {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": {
        "CONTAINERBASE_CACHE_DIR": "/tmp/renovate/cache/containerbase",
        "HELM_EXPERIMENTAL_OCI": "1",
        "HELM_REGISTRY_CONFIG": "/tmp/renovate/cache/__renovate-private-cache/registry.json",
        "HELM_REPOSITORY_CACHE": "/tmp/renovate/cache/__renovate-private-cache/repositories",
        "HELM_REPOSITORY_CONFIG": "/tmp/renovate/cache/__renovate-private-cache/repositories.yaml",
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
]
`;
